fix: safari z-index issue

--- a/src/scss/layout/sections/_new-carousel.scss
+++ b/src/scss/layout/sections/_new-carousel.scss
@@ -31,7 +31,7 @@
     display: flex;
     background: #000;
     color: aliceblue;
-    z-index: 20;
+    z-index: 25;
     cursor: pointer;
 }
 
@@ -55,7 +55,7 @@
     position: absolute;
     top: 0;
     background: #000000b3;
-    z-index: 10;
+    z-index: 20;
     width: 20vw;
     max-height: 50vh;
 }
